--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-base_url=https://jsonplaceholder.typicode.com/
+base_url=http://localhost:9999/
 
 # Enable log of transaction
 logging.level.org.hibernate.engine.transaction.internal.TransactionImpl=DEBUG
